@@ -31,10 +31,8 @@ import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.Map;
 import java.util.Properties;
 import java.util.StringTokenizer;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.logging.Level;
 
 import org.adempiere.base.ILookupFactory;
@@ -85,7 +83,7 @@ public class GridField
 	/**
 	 * 
 	 */
-	private static final long serialVersionUID = 2703129833179761682L;
+	private static final long serialVersionUID = -1871840570764036802L;
 
 	/**
 	 *  Field Constructor.
@@ -307,6 +305,9 @@ public class GridField
 		Evaluator.parseDepends(list, m_vo.DisplayLogic);
 		Evaluator.parseDepends(list, m_vo.ReadOnlyLogic);
 		Evaluator.parseDepends(list, m_vo.MandatoryLogic);
+		// Virtual UI Column
+		if (m_vo.ColumnSQL != null && m_vo.ColumnSQL.length() > 0 && m_vo.ColumnSQL.startsWith("@SQL="))
+			Evaluator.parseDepends(list, m_vo.ColumnSQL.substring(5));
 		//  Lookup
 		if (m_lookup != null)
 			Evaluator.parseDepends(list, m_lookup.getValidation());
@@ -355,7 +356,7 @@ public class GridField
 		{
 			boolean retValue  = false;
 			if (m_vo.MandatoryLogic != null && m_vo.MandatoryLogic.startsWith("@SQL=")) {
-				retValue = parseSQLLogic(m_vo.MandatoryLogic);
+				retValue = Evaluator.parseSQLLogic(m_vo.MandatoryLogic, m_vo.ctx, m_vo.WindowNo, m_vo.TabNo, m_vo.ColumnName);
 
 			} else{
 				retValue= Evaluator.evaluateLogic(this, m_vo.MandatoryLogic);
@@ -387,57 +388,6 @@ public class GridField
 		return isDisplayed (checkContext);
 	}	//	isMandatory
 
-	private boolean parseSQLLogic(String sqlLogic) {
-		String sql = sqlLogic.substring(5); // remove @SQL=
-		boolean reverse = false;
-		if (sql.startsWith("!")) {
-			reverse = true;
-			sql = sql.substring(1); //remove !
-		}
-		sql = Env.parseContext(m_vo.ctx, m_vo.WindowNo, m_vo.TabNo, sql, false, false); // replace
-
-		// variables
-		if (sql.equals("")) {
-			log.log(Level.WARNING,"(" + m_vo.ColumnName + ") - SQL variable parse failed: " + sqlLogic);
-		} else {
-			SQLLogicResult cache = sqlLogicCache.get(sql);
-			if (cache != null) {
-				long since = System.currentTimeMillis() - cache.timestamp;
-				if (since <= 500) {
-					cache.timestamp = System.currentTimeMillis();
-					if (cache.value)
-						return reverse ? false : true;
-					else
-						return reverse ? true : false;
-				}
-			}
-			PreparedStatement stmt = null;
-			ResultSet rs = null;
-			try {
-				stmt = DB.prepareStatement(sql, null);
-				rs = stmt.executeQuery();
-				boolean hasNext = rs.next();
-				if (cache == null) {
-					cache = new SQLLogicResult();
-					sqlLogicCache.put(sql, cache);
-				}
-				cache.value = hasNext;
-				cache.timestamp = System.currentTimeMillis();					
-				if (hasNext)
-					return reverse ? false : true;
-				else
-					return reverse ? true : false;
-			} catch (SQLException e) {
-				log.log(Level.WARNING, "(" + m_vo.ColumnName + ") " + sql, e);
-			} finally {
-				DB.close(rs, stmt);
-				rs = null;
-				stmt = null;
-			}
-		}
-		return false;
-	}
-
 	/**
 	 *	Is parameter Editable - checks if parameter is Read Only
 	 *  @param checkContext if true checks Context
@@ -448,7 +398,7 @@ public class GridField
 		{
 			if (m_vo.ReadOnlyLogic.startsWith("@SQL="))
 			{
-				boolean retValue = !parseSQLLogic(m_vo.ReadOnlyLogic);
+				boolean retValue = !Evaluator.parseSQLLogic(m_vo.ReadOnlyLogic, m_vo.ctx, m_vo.WindowNo, m_vo.TabNo, m_vo.ColumnName);
 				if (!retValue)
 					return false;
 			}
@@ -560,7 +510,7 @@ public class GridField
 		{
 			if (m_vo.ReadOnlyLogic.startsWith("@SQL="))
 			{
-				boolean retValue = !parseSQLLogic(m_vo.ReadOnlyLogic);
+				boolean retValue = !Evaluator.parseSQLLogic(m_vo.ReadOnlyLogic, m_vo.ctx, m_vo.WindowNo, m_vo.TabNo, m_vo.ColumnName);
 				if (!retValue)
 					return false;
 			}
@@ -788,14 +738,14 @@ public class GridField
 			&& (m_vo.ColumnName.equals("AD_Client_ID") || m_vo.ColumnName.equals("AD_Org_ID")))
 		{
 			if (log.isLoggable(Level.FINE)) log.fine("[SystemAccess] " + m_vo.ColumnName + "=0");
-			return new Integer(0);
+			return Integer.valueOf(0);
 		}
 		//	Set Org to System, if Client access
 		else if (X_AD_Table.ACCESSLEVEL_SystemPlusClient.equals(Env.getContext(m_vo.ctx, m_vo.WindowNo, m_vo.TabNo, GridTab.CTX_AccessLevel))
 			&& m_vo.ColumnName.equals("AD_Org_ID"))
 		{
 			if (log.isLoggable(Level.FINE)) log.fine("[ClientAccess] " + m_vo.ColumnName + "=0");
-			return new Integer(0);
+			return Integer.valueOf(0);
 		}
 		
 		return null;
@@ -1054,17 +1004,17 @@ public class GridField
 					int ii = Integer.parseInt(value);
 					if (ii < 0)
 						return null;
-					return new Integer(ii);
+					return Integer.valueOf(ii);
 				}
 				catch (Exception e)
 				{
 					log.warning("Cannot parse: " + value + " - " + e.getMessage());
 				}
-				return new Integer(0);
+				return Integer.valueOf(0);
 			}
 			//	Integer
 			if (m_vo.displayType == DisplayType.Integer)
-				return new Integer(value);
+				return Integer.valueOf(value);
 			
 			//	Number
 			if (DisplayType.isNumeric(m_vo.displayType))
@@ -1242,6 +1192,9 @@ public class GridField
 		//  ** dynamic content **
 		if (checkContext)
 		{
+			if (m_vo.DisplayLogic.startsWith("@SQL=")) {
+				return Evaluator.parseSQLLogic(m_vo.DisplayLogic, m_vo.ctx, m_vo.WindowNo, m_vo.TabNo, m_vo.ColumnName);
+			}
 			Evaluatee evaluatee = new Evaluatee() {
 				public String get_ValueAsString(String variableName) {
 					return GridField.this.get_ValueAsString(ctx, variableName);
@@ -1365,10 +1318,15 @@ public class GridField
 	{
 		if (m_vo.ColumnSQL != null && m_vo.ColumnSQL.length() > 0)
 		{
-			if (withAS)
-				return m_vo.ColumnSQL + " AS " + m_vo.ColumnName;
+			String query;
+			if (m_vo.ColumnSQL.startsWith("@SQL="))
+				query = "NULL";
 			else
-				return m_vo.ColumnSQL;
+				query = m_vo.ColumnSQL;
+			if (withAS)
+				return query + " AS " + m_vo.ColumnName;
+			else
+				return query;
 		}
 		return m_vo.ColumnName;
 	}	//	getColumnSQL
@@ -1379,10 +1337,26 @@ public class GridField
 	 */
 	public boolean isVirtualColumn()
 	{
-		if (m_vo.ColumnSQL != null && m_vo.ColumnSQL.length() > 0)
-			return true; 
-		return false;
-	}	//	isColumnVirtual
+		return (m_vo.ColumnSQL != null && m_vo.ColumnSQL.length() > 0);
+	}	//	isVirtualColumn
+	
+	/**
+	 *  Is Virtual DB Column
+	 *  @return column is virtual DB
+	 */
+	public boolean isVirtualDBColumn()
+	{
+		return (m_vo.ColumnSQL != null && m_vo.ColumnSQL.length() > 0 && !m_vo.ColumnSQL.startsWith("@SQL="));
+	}	//	isVirtualDBColumn
+	
+	/**
+	 *  Is Virtual UI Column
+	 *  @return column is virtual UI
+	 */
+	public boolean isVirtualUIColumn()
+	{
+		return (m_vo.ColumnSQL != null && m_vo.ColumnSQL.length() > 0 && m_vo.ColumnSQL.startsWith("@SQL="));
+	}	//	isVirtualUIColumn
 	
 	/**
 	 * 	Get Header
@@ -1645,6 +1619,14 @@ public class GridField
 	public boolean isSelectionColumn()
 	{
 		return m_vo.IsSelectionColumn;
+	}
+	/**
+	 * 	Is HTML Field (display)
+	 *	@return html field
+	 */
+	public boolean isHtml()
+	{
+		return m_vo.IsHtml;
 	}
 	/**
 	 * 	Selection column sequence
@@ -2025,7 +2007,7 @@ public class GridField
 				|| (DisplayType.isID(dt) && getColumnName().endsWith("_ID")))
 			{
 				int i = Integer.parseInt(newValue);
-				setValue (new Integer(i), inserting);
+				setValue (Integer.valueOf(i), inserting);
 			}
 			//	Return BigDecimal
 			else if (DisplayType.isNumeric(dt))
@@ -2529,7 +2511,19 @@ public class GridField
 	{
 		return m_vo.PA_DashboardContent_ID;
 	}
-	
+
+	public String getPlaceholder() {
+		return m_vo.Placeholder;
+	}
+
+	public String getPlaceholder2() {
+		return m_vo.Placeholder2;
+	}
+
+	public void setPlaceholder(String placeholder) {
+		m_vo.Placeholder = placeholder;
+	}
+
 	public GridField clone(Properties ctx)  
 	{
 		try {
@@ -2561,10 +2555,25 @@ public class GridField
 		return m_lookupEditorSettingValue;
 	}
 
-	private static final Map<String, SQLLogicResult> sqlLogicCache = new ConcurrentHashMap<>();
-	
-	private class SQLLogicResult {
-		long timestamp;
-		boolean value;
+	public void processUIVirtualColumn() {
+		String sql = m_vo.ColumnSQL.substring(5);
+		sql = Env.parseContext(Env.getCtx(), getWindowNo(), sql, false);
+		if (Util.isEmpty(sql)) {
+			setValue(null, false);
+		} else {
+			if (DisplayType.isDate(m_vo.displayType)) {
+				Timestamp valueTS = DB.getSQLValueTSEx(null, sql, new Object[] {});
+				setValue(valueTS, false);
+			} else if (DisplayType.isNumeric(m_vo.displayType)) {
+				BigDecimal valueBD = DB.getSQLValueBDEx(null, sql, new Object[] {});
+				setValue(valueBD, false);
+			} else if (DisplayType.isID(m_vo.displayType)) {
+				int valueInt = DB.getSQLValueEx(null, sql, new Object[] {});
+				setValue(valueInt, false);
+			} else { // default to String
+				String valueStr = DB.getSQLValueStringEx(null, sql);
+				setValue(valueStr, false);
+			}
+		}
 	}
 }   //  GridField
