@@ -111,7 +111,7 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 	/**
 	 * 
 	 */
-	private static final long serialVersionUID = -2946624717834888117L;
+	private static final long serialVersionUID = -3115353522698098211L;
 
 	public static final String DEFAULT_STATUS_MESSAGE = "NavigateOrUpdate";
 
@@ -1818,13 +1818,13 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				if (rs.next())
 				{
 					//	{0} - Number of lines
-					Integer lines = new Integer(rs.getInt(1));
+					Integer lines = Integer.valueOf(rs.getInt(1));
 					arguments[0] = lines;
 					//	{1} - Line net
-					Double net = new Double(rs.getDouble(2));
+					Double net = Double.valueOf(rs.getDouble(2));
 					arguments[1] = net;
 					//	{2} - Line net
-					Double total = new Double(rs.getDouble(3));
+					Double total = Double.valueOf(rs.getDouble(3));
 					arguments[2] = total;
 					filled = true;
 				}
@@ -1905,19 +1905,19 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				if (rs.next())
 				{
 					//	{0} - Number of lines
-					Integer lines = new Integer(rs.getInt(1));
+					Integer lines = Integer.valueOf(rs.getInt(1));
 					arguments[0] = lines;
 					//	{1} - Line toral
-					Double lineTotal = new Double(rs.getDouble(3));
+					Double lineTotal = Double.valueOf(rs.getDouble(3));
 					arguments[1] = lineTotal;
 					//	{2} - Grand total (including tax, etc.)
-					Double grandTotal = new Double(rs.getDouble(4));
+					Double grandTotal = Double.valueOf(rs.getDouble(4));
 					arguments[2] = grandTotal;
 					//	{3} - Currency
 					String currency = rs.getString(2);
 					arguments[3] = currency;
 					//	(4) - Grand total converted to Euro
-					Double grandEuro = new Double(rs.getDouble(5));
+					Double grandEuro = Double.valueOf(rs.getDouble(5));
 					arguments[4] = grandEuro;
 					filled = true;
 				}
@@ -1979,10 +1979,10 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				if (rs.next())
 				{
 					//	{0} - Number of lines
-					Integer lines = new Integer(rs.getInt(1));
+					Integer lines = Integer.valueOf(rs.getInt(1));
 					arguments[0] = lines;
 					//	{1} - Line total
-					Double total = new Double(rs.getDouble(2));
+					Double total = Double.valueOf(rs.getDouble(2));
 					arguments[1] = total;
 					//	{3} - Currency
 					arguments[2] = " ";
@@ -2116,6 +2116,11 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				fFax.setVFormat(phone_frm);
 		}
 
+		// Load virtual UI columns
+		for (GridField field : getFields()) {
+			if (field.isVirtualUIColumn())
+				field.processUIVirtualColumn();
+		}
 	}   //  loadDependentInfo
 
 	/**
@@ -2229,7 +2234,7 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 			rs = pstmt.executeQuery();
 			while (rs.next())
 			{
-				Integer key = new Integer(rs.getInt(1));
+				Integer key = Integer.valueOf(rs.getInt(1));
 				m_Lock.add(key);
 			}
 		}
@@ -2259,7 +2264,7 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 		if (m_Lock == null || m_Lock.isEmpty())
 			return false;
 		//
-		Integer key = new Integer(m_mTable.getKeyID (m_currentRow));
+		Integer key = Integer.valueOf(m_mTable.getKeyID (m_currentRow));
 		return m_Lock.contains(key);
 	}	//	isLocked
 
@@ -2778,9 +2783,18 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 				{
 					if (log.isLoggable(Level.FINE)) log.fine(columnName + " changed - "
 						+ dependentField.getColumnName() + " set to null");
+					Object currentValue = dependentField.getValue();
+					
 					//  invalidate current selection
 					setValue(dependentField, null);
+					
+					if (currentValue != null && mLookup.containsKey(currentValue))
+						setValue(dependentField, currentValue);
 				}
+			}
+			//  if the field is a Virtual UI Column
+			if (dependentField.isVirtualUIColumn()) {
+				dependentField.processUIVirtualColumn();
 			}
 		}   //  for all dependent fields
 	}   //  processDependencies
@@ -2871,6 +2885,11 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 					}
 	
 					ScriptEngine engine = rule.getScriptEngine();
+					if (engine == null) {
+						retValue = 	"Callout Invalid, engine not found: " + rule.getEngineName();
+						log.log(Level.SEVERE, retValue);
+						return retValue;
+					}
 	
 					// Window context are    W_
 					// Login context  are    G_
@@ -2918,7 +2937,7 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 							if (call == null) {
 								//no match from factory, check java classpath
 								Class<?> cClass = Class.forName(className);
-								call = (Callout)cClass.newInstance();
+								call = (Callout)cClass.getDeclaredConstructor().newInstance();
 							}
 						}
 					}
@@ -3181,9 +3200,9 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 			lineNoCurrentRow = (Integer) m_mTable.getValueAt(from, lineCol);
 			lineNoNextRow = (Integer) m_mTable.getValueAt(to, lineCol);
 		} else if (m_mTable.getValueAt(from, lineCol) instanceof BigDecimal) {
-			lineNoCurrentRow = new Integer(((BigDecimal) m_mTable.getValueAt(from, lineCol))
+			lineNoCurrentRow = Integer.valueOf(((BigDecimal) m_mTable.getValueAt(from, lineCol))
 					.intValue());
-			lineNoNextRow = new Integer(((BigDecimal) m_mTable.getValueAt(to, lineCol))
+			lineNoNextRow = Integer.valueOf(((BigDecimal) m_mTable.getValueAt(to, lineCol))
 					.intValue());
 		} else {
 			log.fine("unknown value format - return");
@@ -3300,7 +3319,16 @@ public class GridTab implements DataStatusListener, Evaluatee, Serializable
 	public boolean isNew() {
 		return isOpen() && getCurrentRow() >= 0 && getCurrentRow() == m_mTable.getNewRow();
 	}
-	
+
+	public String getAD_Tab_UU() {
+		return m_vo.AD_Tab_UU;
+	}
+
+	public String getAD_Process_UU()
+	{
+		return m_vo.AD_Process_UU;
+	}
+
 	public boolean isUpdateWindowContext() 
 	{
 		return m_updateWindowContext ;
