@@ -27,6 +27,7 @@ import java.util.logging.Level;
 
 import org.compiere.util.CLogger;
 import org.compiere.util.DB;
+import org.compiere.util.DisplayType;
 import org.compiere.util.Env;
 import org.compiere.util.KeyNamePair;
 import org.compiere.util.Msg;
@@ -86,7 +87,7 @@ public class MQuery implements Serializable
 			SQL = "SELECT ip.ParameterName,ip.P_String,ip.P_String_To,"			//	1..3
 				+ "ip.P_Number,ip.P_Number_To,"									//	4..5
 				+ "ip.P_Date,ip.P_Date_To, ip.Info,ip.Info_To, "				//	6..9
-				+ "pp.Name, pp.IsRange "										//	10..11
+				+ "pp.Name, pp.IsRange, pp.AD_Reference_ID "					//	10..12
 				+ "FROM AD_PInstance_Para ip, AD_PInstance i, AD_Process_Para pp "
 				+ "WHERE i.AD_PInstance_ID=ip.AD_PInstance_ID"
 				+ " AND pp.AD_Process_ID=i.AD_Process_ID"
@@ -97,7 +98,7 @@ public class MQuery implements Serializable
 		else
 			SQL = "SELECT ip.ParameterName,ip.P_String,ip.P_String_To, ip.P_Number,ip.P_Number_To,"
 				+ "ip.P_Date,ip.P_Date_To, ip.Info,ip.Info_To, "
-				+ "ppt.Name, pp.IsRange "
+				+ "ppt.Name, pp.IsRange, pp.AD_Reference_ID "
 				+ "FROM AD_PInstance_Para ip, AD_PInstance i, AD_Process_Para pp, AD_Process_Para_Trl ppt "
 				+ "WHERE i.AD_PInstance_ID=ip.AD_PInstance_ID"
 				+ " AND pp.AD_Process_ID=i.AD_Process_ID"
@@ -131,11 +132,11 @@ public class MQuery implements Serializable
 				Double P_Number = null;
 				double d = rs.getDouble(4);
 				if (!rs.wasNull())
-					P_Number = new Double(d);
+					P_Number = Double.valueOf(d);
 				Double P_Number_To = null;
 				d = rs.getDouble(5);
 				if (!rs.wasNull())
-					P_Number_To = new Double(d);
+					P_Number_To = Double.valueOf(d);
 				//
 				Timestamp P_Date = rs.getTimestamp(6);
 				Timestamp P_Date_To = rs.getTimestamp(7);
@@ -145,6 +146,8 @@ public class MQuery implements Serializable
 				//
 				String Name = rs.getString(10);
 				boolean isRange = "Y".equals(rs.getString(11));
+				//
+				int Reference_ID = rs.getInt(12);
 				//
 				if (s_log.isLoggable(Level.FINE)) s_log.fine(ParameterName + " S=" + P_String + "-" + P_String_To
 					+ ", N=" + P_Number + "-" + P_Number_To + ", D=" + P_Date + "-" + P_Date_To
@@ -189,7 +192,7 @@ public class MQuery implements Serializable
 					else	//	P_Number_To != null
 					{
 						if (P_Number == null)
-							query.addRestriction("TRUNC("+ParameterName+")", MQuery.LESS_EQUAL, 
+							query.addRestriction(ParameterName, MQuery.LESS_EQUAL, 
 								P_Number_To, Name, Info);
 						else
 							query.addRangeRestriction(ParameterName, 
@@ -199,23 +202,22 @@ public class MQuery implements Serializable
 				//	Date
 				else if (P_Date != null || P_Date_To != null)
 				{
+					String paramName = (Reference_ID == DisplayType.DateTime) ? ParameterName
+							: "TRUNC(" + ParameterName + ")";
+
 					if (P_Date_To == null)
 					{
 						if (isRange)
-							query.addRestriction("TRUNC("+ParameterName+")", MQuery.GREATER_EQUAL, 
-								P_Date, Name, Info);
+							query.addRestriction(paramName, MQuery.GREATER_EQUAL, P_Date, Name, Info);
 						else
-							query.addRestriction("TRUNC("+ParameterName+")", MQuery.EQUAL, 
-								P_Date, Name, Info);
+							query.addRestriction(paramName, MQuery.EQUAL, P_Date, Name, Info);
 					}
-					else	//	P_Date_To != null
+					else // P_Date_To != null
 					{
 						if (P_Date == null)
-							query.addRestriction("TRUNC("+ParameterName+")", MQuery.LESS_EQUAL, 
-								P_Date_To, Name, Info);
+							query.addRestriction(paramName, MQuery.LESS_EQUAL, P_Date_To, Name, Info);
 						else
-							query.addRangeRestriction("TRUNC("+ParameterName+")", 
-								P_Date, P_Date_To, Name, Info, Info_To);
+							query.addRangeRestriction(paramName, P_Date, P_Date_To, Name, Info, Info_To);
 					}
 				}
 			}
@@ -311,7 +313,7 @@ public class MQuery implements Serializable
 		MQuery query = new MQuery();
 		if (columnName.endsWith("_ID"))
 			query.setTableName(columnName.substring(0, columnName.length()-3));
-		query.addRestriction(columnName, EQUAL, new Integer(value));
+		query.addRestriction(columnName, EQUAL, Integer.valueOf(value));
 		query.setRecordCount(1);	//	guess
 		return query;
 	}	//	getEqualQuery
@@ -527,7 +529,7 @@ public class MQuery implements Serializable
 		int Code)
 	{
 		Restriction r = new Restriction (ColumnName, Operator,
-			new Integer(Code), null, null, true, 0);
+			Integer.valueOf(Code), null, null, true, 0);
 		m_list.add(r);
 	}	//	addRestriction
 
@@ -1024,7 +1026,7 @@ class Restriction  implements Serializable
 		if (code instanceof Boolean)
 			Code = ((Boolean)code).booleanValue() ? "Y" : "N";
 		else if (code instanceof KeyNamePair)
-			Code = new Integer(((KeyNamePair)code).getKey());
+			Code = Integer.valueOf(((KeyNamePair)code).getKey());
 		else if (code instanceof ValueNamePair)
 			Code = ((ValueNamePair)code).getValue();
 		else
@@ -1121,7 +1123,7 @@ class Restriction  implements Serializable
 			MTable table = MTable.get(Env.getCtx(), tableName);
 			if (table != null) {
 				for (MColumn col : table.getColumns(false)) {
-					String colSQL = col.getColumnSQL();
+					String colSQL = col.getColumnSQL(true);
 					if (colSQL != null && colSQL.contains("@"))
 						colSQL = Env.parseContext(Env.getCtx(), -1, colSQL, false, true);
 					if (ColumnName.equals(colSQL)) {
